feat: integrate gnome-keyring support and streamline Brave configuration
- Added scripts to configure gnome-keyring for use with SDDM and Brave browser.
- Updated executable_dot_profile to start gnome-keyring-daemon for non-Hyprland sessions.
- Enhanced autostart configuration for Hyprland to include gnome-keyring initialization.
- Included removal scripts for KWallet to ensure a smooth transition to gnome-keyring.
- Updated package installation script to include gnome-keyring as a dependency.

--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -15,6 +15,9 @@ exec-once = dex --autostart --environment Hyprland
 # Authentication agent (polkit)
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+# Credential storage (Secret Service / gnome-keyring)
+exec-once = ~/.local/bin/start-gnome-keyring.sh
+
 # Notification daemon
 exec-once = mako
 
