--- a/home/dot_config/hypr/hyprland.conf.d/environment.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/environment.conf
@@ -11,6 +11,10 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
+# Credential Storage (Secret Service)
+env = DBUS_SESSION_BUS_ADDRESS,unix:path=$XDG_RUNTIME_DIR/bus
+env = GNOME_KEYRING_CONTROL,$XDG_RUNTIME_DIR/keyring
+
 # Qt Variables
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
