feat: enhance gnome-keyring integration and remove KWallet scripts
- Updated executable_dot_profile to prioritize gnome-keyring and unset KWallet environment variables.
- Deleted obsolete scripts for configuring Brave and SDDM with KWallet, streamlining the transition to gnome-keyring.
- Modified autostart configurations to ensure gnome-keyring takes precedence over KWallet.
- Adjusted environment settings to support gnome-keyring as the primary credential storage solution.

--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -18,6 +18,9 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # Credential storage (Secret Service / gnome-keyring)
 exec-once = ~/.local/bin/start-gnome-keyring.sh
 
+# Disable kwalletd to ensure gnome-keyring priority
+exec-once = pkill -9 kwalletd5 kwalletd6 2>/dev/null || true
+
 # Notification daemon
 exec-once = mako
 
