--- a/home/dot_config/hypr/hyprland.conf.d/environment.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/environment.conf
@@ -11,9 +11,12 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
-# Credential Storage (Secret Service)
+# Credential Storage (Secret Service) - Prioritize gnome-keyring over kwallet
 env = DBUS_SESSION_BUS_ADDRESS,unix:path=$XDG_RUNTIME_DIR/bus
 env = GNOME_KEYRING_CONTROL,$XDG_RUNTIME_DIR/keyring
+env = PASSWORD_STORE,basic
+env = KDE_FULL_SESSION,
+env = KDE_SESSION_VERSION,
 
 # Qt Variables
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
