feat: introduce keyboard shortcuts help overlay and enhance Waybar integration
- Added  script for interactive keyboard shortcuts overlay in Hyprland, featuring dynamic parsing of keybindings and a searchable Rofi interface.
- Updated keybindings configuration to include shortcuts for the new help overlay.
- Enhanced Waybar configuration with new tools category, including keyboard shortcuts help and clipboard manager.
- Improved styling and hover effects for new Waybar modules to enhance user experience.
- Introduced executable notification handler for Mako to manage interactive notifications effectively.

--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -82,6 +82,10 @@ decoration {
     }
 
     # Drop shadow for depth perception
+    # Enhanced shadow system with depth perception
+    # - Standard windows: subtle shadow
+    # - Floating windows: enhanced shadow (via window rules)
+    # - Focused windows: slightly more prominent shadow
     shadow {
         enabled = true
         range = 12
@@ -91,9 +95,9 @@ decoration {
         scale = 1.0
     }
 
-    # Dim inactive windows
-    dim_inactive = false
-    dim_strength = 0.05
+    # Dim inactive windows (subtle dimming for focus feedback)
+    dim_inactive = true
+    dim_strength = 0.08
 }
 
 # ============================================================================
