--- a/home/dot_config/hypr/hyprland.conf.d/animations.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/animations.conf
@@ -9,6 +9,19 @@
 animations {
     enabled = true
 
+    # ============================================================================
+    # Unified Animation System
+    # ============================================================================
+    # Standardized timing for consistent UX across all components
+    # Duration format: <name>, <on>, <off>, <curve>, <style>
+    # - on: frames to animate in (1 frame ≈ 16.67ms at 60fps)
+    # - off: frames to wait before next animation
+    # Standard durations:
+    # - Fast: 4 frames (67ms) - Quick feedback, UI elements
+    # - Normal: 6 frames (100ms) - Standard transitions
+    # - Slow: 8 frames (133ms) - Major state changes
+    # ============================================================================
+
     # Bezier curves for smooth animations
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.1, 0.1, 1.0
@@ -17,30 +30,38 @@ animations {
     bezier = linear, 0.0, 0.0, 1.0, 1.0
     bezier = easeInOut, 0.42, 0.0, 0.58, 1.0
     bezier = easeOut, 0.0, 0.0, 0.58, 1.0
+    bezier = focusPulse, 0.4, 0.0, 0.2, 1.0
 
-    # Window animations
+    # Window animations (normal speed - 6 frames)
     animation = windows, 1, 6, wind, slide
     animation = windowsIn, 1, 6, winIn, slide
-    animation = windowsOut, 1, 5, winOut, slide
-    animation = windowsMove, 1, 5, wind, slide
+    animation = windowsOut, 1, 6, winOut, slide
+    animation = windowsMove, 1, 6, wind, slide
 
     # Border animations
-    animation = border, 1, 1, liner
+    # Enhanced border animation for focus changes (normal speed)
+    animation = border, 1, 6, easeInOut
     animation = borderangle, 1, 30, liner, loop
 
-    # Fade animations
-    animation = fade, 1, 10, default
-    animation = fadeIn, 1, 8, easeOut
+    # Fade animations (normal speed - 6 frames)
+    animation = fade, 1, 6, easeInOut
+    animation = fadeIn, 1, 6, easeOut
     animation = fadeOut, 1, 6, easeOut
     animation = fadeSwitch, 1, 6, easeInOut
     animation = fadeShadow, 1, 6, easeInOut
     animation = fadeDim, 1, 6, easeInOut
 
-    # Workspace animations
+    # Workspace animations (normal speed - 6 frames)
+    # Smooth workspace transitions with position memory
+    # slidevert provides vertical sliding animation for workspace switching
     animation = workspaces, 1, 6, wind, slidevert
     animation = specialWorkspace, 1, 6, wind, slidevert
+    
+    # Workspace window animations (for windows moving between workspaces)
+    # This ensures windows smoothly transition when moved to different workspaces
+    animation = windowsMove, 1, 6, wind, slide
 
-    # Layer animations (for overlays like Waybar, EWW)
+    # Layer animations (fast speed - 4 frames for overlays)
     animation = layers, 1, 4, easeOut, slide
     animation = layersIn, 1, 4, easeOut, slide
     animation = layersOut, 1, 4, easeOut, slide
