--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -37,6 +37,10 @@ bind = $mainMod, X, exec, ~/.local/bin/dots-power-menu --rofi
 # Lock screen
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/lock.sh
 
+# Keyboard shortcuts help overlay
+bind = $mainMod, question, exec, ~/.local/bin/dots-keyboard-help
+bind = $mainMod, slash, exec, ~/.local/bin/dots-keyboard-help
+
 # Interactive gaps management (like i3-gaps)
 bind = $mainMod SHIFT, G, exec, ~/.config/hypr/scripts/gaps-interactive.sh
 
