--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -109,6 +109,16 @@ windowrulev2 = float, class:^(mako)$
 windowrulev2 = nofocus, class:^(mako)$
 windowrulev2 = noshadow, class:^(mako)$
 windowrulev2 = rounding 0, class:^(mako)$
+
+# ============================================================================
+# Focus Enhancement Rules
+# ============================================================================
+
+# Note: Shadow enhancement for floating windows is handled globally
+# in decoration.shadow settings. Individual window shadow rules are not
+# supported in Hyprland - use noshadow to disable shadows for specific windows.
+
+# ============================================================================
 # Opacity Rules
 # ============================================================================
 
