--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -29,28 +29,83 @@
 # ============================================================================
 
 # System utilities
-windowrulev2 = float, class:^(pavucontrol)$
-windowrulev2 = center, class:^(pavucontrol)$
-windowrulev2 = float, class:^(blueman-manager)$
-windowrulev2 = center, class:^(blueman-manager)$
-windowrulev2 = float, class:^(nm-connection-editor)$
-windowrulev2 = center, class:^(nm-connection-editor)$
-windowrulev2 = float, class:^(gnome-calculator)$
-windowrulev2 = center, class:^(gnome-calculator)$
+# Audio control (matches both pavucontrol and org.pulseaudio.pavucontrol)
+windowrulev2 = float, class:.*pavucontrol.*
+windowrulev2 = center, class:.*pavucontrol.*
+windowrulev2 = size 40% 50%, class:.*pavucontrol.*
+# PipeWire audio control
+windowrulev2 = float, class:.*pwvucontrol.*
+windowrulev2 = center, class:.*pwvucontrol.*
+windowrulev2 = size 40% 50%, class:.*pwvucontrol.*
+# Bluetooth manager
+windowrulev2 = float, class:.*blueman.*
+windowrulev2 = center, class:.*blueman.*
+windowrulev2 = size 40% 50%, class:.*blueman.*
+# Network manager
+windowrulev2 = float, class:.*nm-connection-editor.*
+windowrulev2 = center, class:.*nm-connection-editor.*
+windowrulev2 = size 40% 50%, class:.*nm-connection-editor.*
+# Calculator
+windowrulev2 = float, class:.*calculator.*
+windowrulev2 = center, class:.*calculator.*
+
+# Wallpaper manager (wpgtk)
+windowrulev2 = float, class:.*[Ww]pg.*
+windowrulev2 = center, class:.*[Ww]pg.*
+windowrulev2 = size 40% 50%, class:.*[Ww]pg.*
 
 # Community GUI tools (new)
-windowrulev2 = float, class:^(copyq)$
-windowrulev2 = float, class:^(fuzzel)$
-windowrulev2 = float, class:^(wofi)$
-windowrulev2 = float, class:^(nwg-look)$
-windowrulev2 = center, class:^(nwg-look)$
-windowrulev2 = float, class:^(nwg-displays)$
-windowrulev2 = center, class:^(nwg-displays)$
-windowrulev2 = float, class:^(nwg-bar)$
-windowrulev2 = float, class:^(nwg-drawer)$
-windowrulev2 = float, class:^(auto-cpufreq-gtk)$
-windowrulev2 = center, class:^(auto-cpufreq-gtk)$
-windowrulev2 = float, title:^(wlogout)$
+# Clipboard manager
+windowrulev2 = float, class:.*copyq.*
+windowrulev2 = center, class:.*copyq.*
+windowrulev2 = size 35% 50%, class:.*copyq.*
+# Launchers
+windowrulev2 = float, class:.*fuzzel.*
+windowrulev2 = float, class:.*wofi.*
+# nwg-look (GTK theme editor)
+windowrulev2 = float, class:.*nwg-look.*
+windowrulev2 = center, class:.*nwg-look.*
+windowrulev2 = size 50% 60%, class:.*nwg-look.*
+# nwg-displays
+windowrulev2 = float, class:.*nwg-displays.*
+windowrulev2 = center, class:.*nwg-displays.*
+windowrulev2 = size 60% 70%, class:.*nwg-displays.*
+# nwg-bar
+windowrulev2 = float, class:.*nwg-bar.*
+windowrulev2 = size 30% 40%, class:.*nwg-bar.*
+# nwg-drawer
+windowrulev2 = float, class:.*nwg-drawer.*
+windowrulev2 = size 40% 60%, class:.*nwg-drawer.*
+# Auto CPU frequency GUI
+windowrulev2 = float, class:.*auto-cpufreq.*
+windowrulev2 = center, class:.*auto-cpufreq.*
+windowrulev2 = size 40% 50%, class:.*auto-cpufreq.*
+# wlogout
+windowrulev2 = float, title:.*wlogout.*
+
+# GTK theme and appearance tools
+windowrulev2 = float, class:.*lxappearance.*
+windowrulev2 = center, class:.*lxappearance.*
+windowrulev2 = size 50% 60%, class:.*lxappearance.*
+
+# Display configuration tools
+windowrulev2 = float, class:.*arandr.*
+windowrulev2 = center, class:.*arandr.*
+windowrulev2 = size 60% 70%, class:.*arandr.*
+
+# LXQt configuration tools
+windowrulev2 = float, class:.*lxqt-config.*
+windowrulev2 = center, class:.*lxqt-config.*
+windowrulev2 = size 60% 70%, class:.*lxqt-config.*
+windowrulev2 = float, class:.*lxqt-config-input.*
+windowrulev2 = center, class:.*lxqt-config-input.*
+windowrulev2 = size 45% 55%, class:.*lxqt-config-input.*
+windowrulev2 = float, class:.*lxqt-config-monitor.*
+windowrulev2 = center, class:.*lxqt-config-monitor.*
+windowrulev2 = size 60% 70%, class:.*lxqt-config-monitor.*
+windowrulev2 = float, class:.*lxqt-config-appearance.*
+windowrulev2 = center, class:.*lxqt-config-appearance.*
+windowrulev2 = size 50% 60%, class:.*lxqt-config-appearance.*
 
 # File managers (dialogs)
 windowrulev2 = float, title:^(File Operation Progress)$
@@ -80,20 +135,20 @@ windowrulev2 = noshadow, class:^(Rofi)$
 windowrulev2 = rounding 0, class:^(Rofi)$
 
 # Fuzzel/Wofi launchers
-windowrulev2 = stayfocused, class:^(fuzzel)$
-windowrulev2 = animation slide, class:^(fuzzel)$
-windowrulev2 = stayfocused, class:^(wofi)$
-windowrulev2 = animation slide, class:^(wofi)$
+windowrulev2 = stayfocused, class:.*fuzzel.*
+windowrulev2 = animation slide, class:.*fuzzel.*
+windowrulev2 = stayfocused, class:.*wofi.*
+windowrulev2 = animation slide, class:.*wofi.*
 
 # CopyQ clipboard manager
-windowrulev2 = center, class:^(copyq)$
-windowrulev2 = stayfocused, class:^(copyq)$
-windowrulev2 = animation popin, class:^(copyq)$
+windowrulev2 = center, class:.*copyq.*
+windowrulev2 = stayfocused, class:.*copyq.*
+windowrulev2 = animation popin, class:.*copyq.*
 
 # nwg-bar power menu
-windowrulev2 = center, class:^(nwg-bar)$
-windowrulev2 = stayfocused, class:^(nwg-bar)$
-windowrulev2 = animation popin, class:^(nwg-bar)$
+windowrulev2 = center, class:.*nwg-bar.*
+windowrulev2 = stayfocused, class:.*nwg-bar.*
+windowrulev2 = animation popin, class:.*nwg-bar.*
 
 # wlogout power menu
 windowrulev2 = center, title:^(wlogout)$
@@ -127,10 +182,22 @@ windowrulev2 = opacity 0.95 0.85, class:^(kitty)$
 windowrulev2 = opacity 0.95 0.85, class:^(Alacritty)$
 
 # Community GUI tools
-windowrulev2 = opacity 0.96 0.92, class:^(copyq)$
-windowrulev2 = opacity 0.96 0.92, class:^(nwg-look)$
-windowrulev2 = opacity 0.96 0.92, class:^(nwg-displays)$
-windowrulev2 = opacity 0.96 0.92, class:^(auto-cpufreq-gtk)$
+windowrulev2 = opacity 0.96 0.92, class:.*copyq.*
+windowrulev2 = opacity 0.96 0.92, class:.*nwg-look.*
+windowrulev2 = opacity 0.96 0.92, class:.*nwg-displays.*
+windowrulev2 = opacity 0.96 0.92, class:.*auto-cpufreq.*
+windowrulev2 = opacity 0.96 0.92, class:.*pwvucontrol.*
+windowrulev2 = opacity 0.96 0.92, class:.*pavucontrol.*
+windowrulev2 = opacity 0.96 0.92, class:.*[Ww]pg.*
+
+# GTK theme and appearance tools
+windowrulev2 = opacity 0.96 0.92, class:.*lxappearance.*
+
+# Display configuration tools
+windowrulev2 = opacity 0.96 0.92, class:.*arandr.*
+
+# LXQt configuration tools
+windowrulev2 = opacity 0.96 0.92, class:.*lxqt-config.*
 
 # File managers
 windowrulev2 = opacity 0.95 0.90, class:^(thunar)$
@@ -180,18 +247,8 @@ windowrulev2 = noanim, class:^(jgmenu)$
 # Instead, specific windows that need centering are centered individually below
 # windowrulev2 = center, floating:1
 
-# Specific application sizes
-windowrulev2 = size 60% 70%, class:^(pavucontrol)$
-windowrulev2 = size 50% 60%, class:^(blueman-manager)$
-windowrulev2 = size 40% 50%, class:^(nm-connection-editor)$
-
-# Community GUI tools sizing
-windowrulev2 = size 50% 60%, class:^(copyq)$
-windowrulev2 = size 60% 70%, class:^(nwg-look)$
-windowrulev2 = size 70% 80%, class:^(nwg-displays)$
-windowrulev2 = size 40% 50%, class:^(auto-cpufreq-gtk)$
-windowrulev2 = size 30% 40%, class:^(nwg-bar)$
-windowrulev2 = size 40% 60%, class:^(nwg-drawer)$
+# Note: Size rules are now defined immediately after float/center rules for each application
+# This ensures proper application order and better compatibility
 
 # ============================================================================
 # Animation Rules
