feat: introduce Color Audit documentation for hardcoded colors migration
- Added a comprehensive Color Audit document outlining hardcoded colors in various configuration files.
- Identified migration priorities for Rofi themes, Kitty Terminal, and other applications to the smart-colors system.
- Provided detailed migration strategies and implementation steps to enhance theme consistency and adaptability.
- Included recommendations for future audits and considerations for other applications.

--- a/home/dot_config/waybar/configs/default/config-bottom.json
+++ b/home/dot_config/waybar/configs/default/config-bottom.json
@@ -34,6 +34,9 @@
       "class<terminator>": "󰞷",
       "class<gnome-terminal>": "󰞷",
 
+      "class<zen-browser>": "󰖟",
+      "class<Zen>": "󰖟",
+      "class<app.zen_browser.Zen>": "󰖟",
       "class<brave-browser>": "󰖟",
       "class<firefox>": "󰈹",
       "class<Firefox>": "󰈹",
