--- a/home/dot_config/waybar/configs/vertical-left/config.json
+++ b/home/dot_config/waybar/configs/vertical-left/config.json
@@ -198,6 +198,9 @@
       "class<terminator>": "󰞷",
       "class<gnome-terminal>": "󰞷",
 
+      "class<zen-browser>": "󰖟",
+      "class<Zen>": "󰖟",
+      "class<app.zen_browser.Zen>": "󰖟",
       "class<brave-browser>": "󰖟",
       "class<firefox>": "󰈹",
       "class<Firefox>": "󰈹",
