feat: add Flameshot configuration and enhance screenshot script for Wayland support

--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -287,6 +287,16 @@ windowrulev2 = idleinhibit focus, class:^(firefox)$, title:^(.*YouTube.*)$
 # Disable blur for performance
 windowrulev2 = noblur, class:^(steam_app).*
 
+# Flameshot - Multi-monitor fix for Wayland
+# See: https://github.com/flameshot-org/flameshot/blob/master/docs/Sway%20and%20wlroots%20support.md
+windowrulev2 = float, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = move 0 0, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = pin, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = fullscreenstate 0, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = noanim, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = noinitialfocus, class:^(flameshot)$, title:^(flameshot)$
+windowrulev2 = stayfocused, class:^(flameshot)$, title:^(flameshot)$
+
 # XWayland video bridge
 windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
 windowrulev2 = noanim, class:^(xwaylandvideobridge)$
