feat: enhance window rules for Electron apps and add special handling for Peek in hyprland configuration

--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -83,6 +83,23 @@ windowrulev2 = size 40% 50%, class:.*auto-cpufreq.*
 # wlogout
 windowrulev2 = float, title:.*wlogout.*
 
+# Electron applications (development and general)
+# Make all Electron apps float - useful for development and debugging
+# Matches apps with "electron" in class name (for dev tools like electron dev, etc.)
+windowrulev2 = float, class:.*[Ee]lectron.*
+windowrulev2 = center, class:.*[Ee]lectron.*
+windowrulev2 = size 80% 85%, class:.*[Ee]lectron.*
+
+# Development Electron apps (common patterns for dev/test apps)
+# Apps that follow common Electron dev patterns (project-*, *-desktop-app, etc.)
+# These are typically development/test instances of Electron apps
+windowrulev2 = float, class:.*project-.*
+windowrulev2 = center, class:.*project-.*
+windowrulev2 = size 80% 85%, class:.*project-.*
+windowrulev2 = float, class:.*-desktop-app
+windowrulev2 = center, class:.*-desktop-app
+windowrulev2 = size 80% 85%, class:.*-desktop-app
+
 # GTK theme and appearance tools
 windowrulev2 = float, class:.*lxappearance.*
 windowrulev2 = center, class:.*lxappearance.*
@@ -297,6 +314,17 @@ windowrulev2 = noanim, class:^(flameshot)$, title:^(flameshot)$
 windowrulev2 = noinitialfocus, class:^(flameshot)$, title:^(flameshot)$
 windowrulev2 = stayfocused, class:^(flameshot)$, title:^(flameshot)$
 
+# Peek - GIF recorder (needs special handling for area selection)
+windowrulev2 = float, class:^(peek)$
+windowrulev2 = move 0 0, class:^(peek)$
+windowrulev2 = pin, class:^(peek)$
+windowrulev2 = fullscreenstate 0, class:^(peek)$
+windowrulev2 = noanim, class:^(peek)$
+windowrulev2 = noinitialfocus, class:^(peek)$
+windowrulev2 = stayfocused, class:^(peek)$
+windowrulev2 = noshadow, class:^(peek)$
+windowrulev2 = noborder, class:^(peek)$
+
 # XWayland video bridge
 windowrulev2 = opacity 0.0 override 0.0 override, class:^(xwaylandvideobridge)$
 windowrulev2 = noanim, class:^(xwaylandvideobridge)$
@@ -306,19 +334,22 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 # ============================================================================
 # Layer Rules
 # ============================================================================
+# Note: In Hyprland 0.53+, layerrule syntax may have changed
+# These rules are commented out until the correct syntax is confirmed
+# If blur/ignorezero are needed, check Hyprland documentation for current syntax
 
 # Waybar
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
+# layerrule = blur, waybar
+# layerrule = ignorezero, waybar
 
 # Notifications
-layerrule = blur, notifications
-layerrule = ignorezero, notifications
+# layerrule = blur, notifications
+# layerrule = ignorezero, notifications
 
 # Rofi
-layerrule = blur, rofi
-layerrule = ignorezero, rofi
+# layerrule = blur, rofi
+# layerrule = ignorezero, rofi
 
 # EWW
-layerrule = blur, eww
-layerrule = ignorezero, eww
+# layerrule = blur, eww
+# layerrule = ignorezero, eww
