feat: expand theme and rice system with new configurations and enhancements
- Updated README to reflect the addition of 13 beautiful themes, including Cyberpunk, Cozy, Vaporwave, and Nature.
- Enhanced documentation for the System Architecture, detailing available profiles and integration with animation settings.
- Improved Dots Scripts documentation to highlight the visual rice selector's new features, including category grouping and multi-monitor support.
- Introduced new rice configurations for Cozy Corner, Neon City, and Vapor Dreams, each with specific animations and backgrounds.
- Added new desktop entries for various utility applications, enhancing user accessibility to tools like Dots Backup, Bluetooth management, and Screenshot capture.
- Removed outdated rice configurations and backgrounds to streamline the system and improve performance.

--- a/home/dot_config/waybar/configs/default/config-top.json
+++ b/home/dot_config/waybar/configs/default/config-top.json
@@ -84,7 +84,10 @@
     "modules": [
       "custom/tools-header",
       "custom/tools-clipboard",
-      "custom/tools-keyboard-help"
+      "custom/tools-keyboard-help",
+      "custom/tools-screenshot",
+      "custom/tools-monitors",
+      "custom/tools-security"
     ]
   },
 
@@ -112,6 +115,27 @@
     "tooltip": true,
     "tooltip-format": "Keyboard Shortcuts Help",
     "on-click": "~/.local/bin/dots-keyboard-help"
+  },
+
+  "custom/tools-screenshot": {
+    "format": "󰹑",
+    "tooltip": true,
+    "tooltip-format": "Screenshot Tool",
+    "on-click": "~/.local/bin/dots-screenshooter --rofi"
+  },
+
+  "custom/tools-monitors": {
+    "format": "󰍹",
+    "tooltip": true,
+    "tooltip-format": "Monitor Configuration",
+    "on-click": "~/.local/bin/dots-hypr-monitors"
+  },
+
+  "custom/tools-security": {
+    "format": "󰒃",
+    "tooltip": true,
+    "tooltip-format": "Security Audit",
+    "on-click": "~/.local/bin/dots-security-audit"
   },
 
   "custom/apps-web": {
