feat: add rice selector module to Waybar configurations
- Introduced a new custom/tools-rice module across multiple Waybar configurations, enhancing the toolset available to users.
- Updated the icon format for the rice selector to ensure visual consistency.
- Added tooltip support for the rice selector, improving user experience with descriptive information on hover.

--- a/home/dot_config/waybar/configs/default/config-top.json
+++ b/home/dot_config/waybar/configs/default/config-top.json
@@ -83,6 +83,7 @@
     },
     "modules": [
       "custom/tools-header",
+      "custom/tools-rice",
       "custom/tools-clipboard",
       "custom/tools-keyboard-help",
       "custom/tools-screenshot",
@@ -101,6 +102,13 @@
     "format": "󰆍",
     "tooltip": true,
     "tooltip-format": "Tools\nClick to expand/collapse"
+  },
+
+  "custom/tools-rice": {
+    "format": "󰟪",
+    "tooltip": true,
+    "tooltip-format": "Rice Selector",
+    "on-click": "~/.local/bin/dots-rofi-rice-selector"
   },
 
   "custom/tools-clipboard": {
