--- a/home/dot_config/waybar/configs/vertical-left/config.json
+++ b/home/dot_config/waybar/configs/vertical-left/config.json
@@ -414,9 +414,17 @@
     },
     "modules": [
       "custom/tools-header",
+      "custom/tools-rice",
       "custom/tools-clipboard",
       "custom/tools-keyboard-help"
     ]
+  },
+
+  "custom/tools-rice": {
+    "format": "󰟪",
+    "tooltip": true,
+    "tooltip-format": "Rice Selector",
+    "on-click": "~/.local/bin/dots-rofi-rice-selector"
   },
 
   "custom/night-mode": {
