feat: integrate Ranger file manager and enhance configuration
- Added Ranger terminal file manager with custom commands and rich preview capabilities.
- Updated Thunar integration to allow opening directories in Ranger directly.
- Enhanced Hyprland configuration with keybindings for Ranger and EasyMotion plugin.
- Improved documentation for Ranger setup, including installation instructions and usage tips.
- Updated various scripts and configurations to support seamless integration with the Smart Colors system.

--- a/.github/workflows/clone-and-install.yml
+++ b/.github/workflows/clone-and-install.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
+      - name: Validate script standards
+        run: ./scripts/validate-dots-scripts.sh
+
       - name: Install Dotfiles
         run: ./install.sh
 
