--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ source = ~/.config/hypr/hyprland.conf.d/autostart.conf
 source = ~/.config/hypr/hyprland.conf.d/environment.conf
 source = ~/.config/hypr/hyprland.conf.d/input.conf
 source = ~/.config/hypr/hyprland.conf.d/keybindings.conf
+source = ~/.config/hypr/hyprland.conf.d/easymotion.conf
 source = ~/.config/hypr/hyprland.conf.d/window-rules.conf
 source = ~/.config/hypr/hyprland.conf.d/animations.conf
 source = ~/.config/hypr/hyprland.conf.d/colors.conf
