--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -27,6 +27,9 @@ exec-once = mako
 # Idle management
 exec-once = hypridle
 
+# Window switcher daemon (Alt+Tab)
+exec-once = ~/.local/bin/dots-snappy-switcher daemon
+
 # Clipboard manager
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
