--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -201,6 +201,16 @@ windowrule {
 # ============================================================================
 
 windowrule {
+    name = ranger-popup
+    match:class = ^ranger-popup$
+
+    float = true
+    center = true
+    size = 75% 80%
+    opacity = 0.95 0.90
+}
+
+windowrule {
     name = file-operation-progress
     match:title = ^File Operation Progress$
 
