--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -22,8 +22,10 @@ bind = CTRL, Space, exec, ~/.local/bin/dots-launcher
 # Clipboard manager
 bind = $mainMod, V, exec, ~/.local/bin/dots-clipboard
 
-# File manager
+# File manager (GUI)
 bind = $mainMod, F, exec, exo-open --launch FileManager
+# File manager (terminal — ranger)
+bind = $mainMod, E, exec, kitty --class ranger-popup -e dots-ranger --last-dir
 
 # Web browser
 bind = $mainMod, W, exec, exo-open --launch WebBrowser
@@ -79,6 +81,13 @@ bind = $mainMod SHIFT, P, pin
 
 # Focus mode toggle (floating <-> tiled)
 bind = $mainMod SHIFT, Space, focuscurrentorlast
+
+# Window switcher (snappy-switcher)
+bind = ALT, Tab, exec, ~/.local/bin/dots-snappy-switcher next
+bind = ALT SHIFT, Tab, exec, ~/.local/bin/dots-snappy-switcher prev
+
+# EasyMotion (window jump by labels)
+bind = $mainMod, Z, easymotion, action:hyprctl dispatch focuswindow address:{}
 
 # Smart floating (float + center + resize with optimal size)
 bind = $mainMod SHIFT, F, exec, ~/.config/hypr/scripts/smart-float.sh
