feat: replace Ranger with Yazi file manager and update configurations
- Removed Ranger file manager and integrated Yazi, enhancing performance and features.
- Updated documentation to reflect Yazi's capabilities and usage instructions.
- Modified Thunar context menu and Hyprland keybindings for seamless Yazi integration.
- Adjusted shell aliases and scripts to support Yazi's functionality.
- Enhanced configuration scripts for Yazi's installation and preview dependencies.

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -24,8 +24,8 @@ bind = $mainMod, V, exec, ~/.local/bin/dots-clipboard
 
 # File manager (GUI)
 bind = $mainMod, F, exec, exo-open --launch FileManager
-# File manager (terminal — ranger)
-bind = $mainMod, E, exec, kitty --class ranger-popup -e dots-ranger --last-dir
+# File manager (terminal — yazi)
+bind = $mainMod, E, exec, kitty --class yazi-popup -e dots-yazi --last-dir
 
 # Web browser
 bind = $mainMod, W, exec, exo-open --launch WebBrowser
