--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -201,8 +201,8 @@ windowrule {
 # ============================================================================
 
 windowrule {
-    name = ranger-popup
-    match:class = ^ranger-popup$
+    name = yazi-popup
+    match:class = ^yazi-popup$
 
     float = true
     center = true
