--- a/home/dot_config/waybar/configs/default/config-bottom.json
+++ b/home/dot_config/waybar/configs/default/config-bottom.json
@@ -79,7 +79,7 @@
       "class<dolphin>": "󰉋",
       "class<pcmanfm>": "󰉋",
       "class<nemo>": "󰉋",
-      "class<ranger>": "󰉋",
+      "class<yazi>": "󰉋",
 
       "class<obsidian>": "󱓷",
       "class<notion>": "󰈙",
