--- a/home/dot_config/waybar/configs/vertical-left/config.json
+++ b/home/dot_config/waybar/configs/vertical-left/config.json
@@ -243,7 +243,7 @@
       "class<dolphin>": "󰉋",
       "class<pcmanfm>": "󰉋",
       "class<nemo>": "󰉋",
-      "class<ranger>": "󰉋",
+      "class<yazi>": "󰉋",
 
       "class<obsidian>": "󱓷",
       "class<notion>": "󰈙",
