feat: transition to Quickshell and enhance documentation for improved user experience
- Updated the README and various documentation files to reflect the transition to Quickshell as the primary desktop shell, replacing EWW and Rofi.
- Enhanced performance tips and installation instructions to include Quickshell integration, emphasizing its role in managing themes and colors.
- Refined the architecture documentation to clarify the relationship between Quickshell and other components, such as smart colors and theme management.
- Introduced a new Quickshell Hard-Cut Matrix document to outline the simplification process and core functionalities retained.
- Updated the Smart Colors documentation to highlight its integration with Quickshell and the new palette generation process.
- Improved the overall clarity and organization of the documentation to facilitate user onboarding and customization.

--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -21,11 +21,13 @@ exec-once = ~/.local/bin/start-gnome-keyring.sh
 # Disable kwalletd to ensure gnome-keyring priority
 exec-once = pkill -9 kwalletd5 kwalletd6 2>/dev/null || true
 
-# Notification daemon (handled by Quickshell)
-# exec-once = mako
+# Notifications are handled by Quickshell
 
 # Idle management
 exec-once = hypridle
+
+# Ensure EasyMotion is enabled every session.
+exec-once = sh -lc 'sleep 3; command -v hyprpm >/dev/null 2>&1 && hyprpm enable hyprEasymotion >/dev/null 2>&1 || true'
 
 # Window switcher daemon (Alt+Tab)
 exec-once = ~/.local/bin/dots-snappy-switcher daemon
