feat(hyprland): adopt scrolling layout and niri-style navigation
Switch Hyprland to the scrolling layout as the default to improve window management ergonomics and consistency for daily navigation. Add layoutmsg-based keybindings and update docs so the chezmoi-managed setup reflects the new column workflow.

Made-with: Cursor

--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -35,8 +35,8 @@ general {
     col.active_border = rgba(cba6f7ee) rgba(89b4faee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # Layout
-    layout = dwindle
+    # Layout (Niri-like horizontal tape)
+    layout = scrolling
 
     # Allow tearing for gaming
     allow_tearing = false
@@ -101,21 +101,37 @@ decoration {
 }
 
 # ============================================================================
-# Dwindle Layout Settings
+# Scrolling Layout Settings (Niri-like)
+# ============================================================================
+
+scrolling {
+    # Keep one-column workspaces immersive (great for focused tasks)
+    fullscreen_on_one_column = true
+
+    # Slightly wider default than 50/50 for better readability
+    column_width = 0.62
+
+    # Fit keeps focused columns visible without over-centering jitter
+    focus_fit_method = 1
+    follow_focus = true
+    follow_min_visible = 0.45
+
+    # Cycle presets with layoutmsg colresize +/-conf
+    explicit_column_widths = 0.333, 0.5, 0.618, 0.75, 1.0
+
+    # New columns open to the right by default (Niri-style mental model)
+    direction = right
+}
+
+# ============================================================================
+# Dwindle Layout Settings (fallback if layout switched manually)
 # ============================================================================
 
 dwindle {
-    # Pseudotile (windows retain floating size when tiled)
     pseudotile = true
     preserve_split = true
-
-    # Splitting behavior
     force_split = 0
-
-    # Smart split
     smart_split = true
-
-    # Smart resizing
     smart_resizing = true
 }
 
