--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -67,11 +67,11 @@ bind = $mainMod, M, fullscreen, 0
 # Toggle maximize
 bind = $mainMod SHIFT, M, fullscreen, 1
 
-# Toggle pseudo-tiling (dwindle)
-bind = $mainMod, U, pseudo
+# Promote focused window into its own column (scrolling)
+bind = $mainMod, U, layoutmsg, promote
 
-# Toggle split direction (dwindle)
-bind = $mainMod, apostrophe, togglesplit
+# Toggle focus fit behavior (center <-> fit) for scrolling layout
+bind = $mainMod, apostrophe, layoutmsg, togglefit
 
 # Pin window (keep on all workspaces)
 bind = $mainMod SHIFT, P, pin
@@ -108,6 +108,28 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# ============================================================================
+# Scrolling Layout Navigation (Niri-like)
+# ============================================================================
+
+# Move viewport by columns
+bind = $mainMod ALT, H, layoutmsg, move -col
+bind = $mainMod ALT, L, layoutmsg, move +col
+
+# Swap active column with neighbor
+bind = $mainMod ALT, comma, layoutmsg, swapcol l
+bind = $mainMod ALT, period, layoutmsg, swapcol r
+
+# Column width controls
+bind = $mainMod ALT, minus, layoutmsg, colresize -conf
+bind = $mainMod ALT, equal, layoutmsg, colresize +conf
+binde = $mainMod ALT SHIFT, minus, layoutmsg, colresize -0.05
+binde = $mainMod ALT SHIFT, equal, layoutmsg, colresize +0.05
+
+# Fit strategies
+bind = $mainMod ALT, F, layoutmsg, fit active
+bind = $mainMod ALT SHIFT, F, layoutmsg, fit visible
 
 # ============================================================================
 # Window Movement
