feat(hyprland): add persisted layout profile workflow
Modularize Hyprland layout settings into a dedicated config and add a dots-hypr-layout command to switch, restore, and persist layout profiles across sessions. Wire keybindings, autostart restore, and script registry updates so layout behavior stays consistent with chezmoi-managed defaults while remaining easy to override at runtime.

Made-with: Cursor

--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ source = ~/.config/hypr/hyprland.conf.d/monitors.conf
 source = ~/.config/hypr/hyprland.conf.d/autostart.conf
 source = ~/.config/hypr/hyprland.conf.d/environment.conf
 source = ~/.config/hypr/hyprland.conf.d/input.conf
+source = ~/.config/hypr/hyprland.conf.d/layout.conf
 source = ~/.config/hypr/hyprland.conf.d/keybindings.conf
 source = ~/.config/hypr/hyprland.conf.d/window-rules.conf
 source = ~/.config/hypr/hyprland.conf.d/animations.conf
@@ -98,62 +99,6 @@ decoration {
     # Dim inactive windows (subtle dimming for focus feedback)
     dim_inactive = true
     dim_strength = 0.08
-}
-
-# ============================================================================
-# Scrolling Layout Settings (Niri-like)
-# ============================================================================
-
-scrolling {
-    # Keep one-column workspaces immersive (great for focused tasks)
-    fullscreen_on_one_column = true
-
-    # Slightly wider default than 50/50 for better readability
-    column_width = 0.62
-
-    # Fit keeps focused columns visible without over-centering jitter
-    focus_fit_method = 1
-    follow_focus = true
-    follow_min_visible = 0.45
-
-    # Cycle presets with layoutmsg colresize +/-conf
-    explicit_column_widths = 0.333, 0.5, 0.618, 0.75, 1.0
-
-    # New columns open to the right by default (Niri-style mental model)
-    direction = right
-}
-
-# ============================================================================
-# Dwindle Layout Settings (fallback if layout switched manually)
-# ============================================================================
-
-dwindle {
-    pseudotile = true
-    preserve_split = true
-    force_split = 0
-    smart_split = true
-    smart_resizing = true
-}
-
-# ============================================================================
-# Master Layout Settings
-# ============================================================================
-
-master {
-    # New window position (master/slave/inherit)
-    new_status = master
-
-    # New window behavior
-    new_on_top = false
-
-    # Orientation (left/right/top/bottom/center)
-    orientation = left
-
-    # Center master only when at least this many slave windows are open (0 = always center)
-    slave_count_for_center_master = 2
-
-    # Fallback orientation when slaves < slave_count_for_center_master
-    center_master_fallback = left
 }
 
 # ============================================================================
