--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -26,6 +26,9 @@ exec-once = pkill -9 kwalletd5 kwalletd6 2>/dev/null || true
 # Idle management
 exec-once = hypridle
 
+# Restore persisted layout profile (best effort)
+exec-once = ~/.local/bin/dots-hypr-layout --restore --quiet
+
 
 # Window switcher daemon (Alt+Tab)
 exec-once = ~/.local/bin/dots-snappy-switcher daemon
