--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -73,6 +73,11 @@ bind = $mainMod, U, layoutmsg, promote
 # Toggle focus fit behavior (center <-> fit) for scrolling layout
 bind = $mainMod, apostrophe, layoutmsg, togglefit
 
+# Layout profile switching (persisted via dots-hypr-layout state)
+bind = $mainMod CTRL, W, exec, ~/.local/bin/dots-hypr-layout --toggle
+bind = $mainMod CTRL SHIFT, W, exec, ~/.local/bin/dots-hypr-layout --set=scrolling
+bind = $mainMod CTRL ALT, W, exec, ~/.local/bin/dots-hypr-layout --set=dwindle
+
 # Pin window (keep on all workspaces)
 bind = $mainMod SHIFT, P, pin
 
